--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -3,8 +3,8 @@
     width: 100%;
     min-width: 700px;
     height: 50px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 12px 0;
+    margin: 0 auto;
     background-color: #24292e;
 
     //.top-tips {
