--- a/src/css/articleList.less
+++ b/src/css/articleList.less
@@ -13,7 +13,20 @@
       }
 
       .describe {
+        width: 100%;
         align-self: flex-start;
+        color: #555;
+      }
+
+      .info {
+        margin-bottom: 30px;
+        font-size: 12px;
+        color: #999;
+
+        .category {
+          font-size: 12px;
+          color: #999;
+        }
       }
     }
 
