二次开发基本完善

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,7 +1,8 @@
 :global {
   .footer {
     width: 30%;
-    margin: 0 auto;
+    margin: 20px auto 10px;
+    min-width: 300px;
     font-size: 14px;
     text-align: center;
     color: #999
