--- a/src/css/pageLi.less
+++ b/src/css/pageLi.less
@@ -14,10 +14,18 @@
 
             .page-btn {
                 cursor: pointer;
-                padding: 2px 5px;
+                padding: 1px 4px;
                 color: white;
                 border-radius: 3px;
                 background-color: #24292e;
+                border: 1px solid #24292e;
+                transition: all .2s linear 0s;
+
+                &:hover {
+                    border: 1px solid black;
+                    color: black;
+                    background: white;
+                }
             }
 
             .search {
