--- a/src/css/publish.less
+++ b/src/css/publish.less
@@ -57,18 +57,15 @@
     .bottom-container {
       display: flex;
       align-items: center;
-      justify-content: space-around;
+      justify-content: space-between;
       width: 100%;
       height: 50px;
+      padding: 5px;
       border: 1px solid #eee;
 
       .upload, .category {
         display: flex;
         align-items: center;
-      }
-
-      .upload {
-
       }
 
       .btn {
@@ -78,7 +75,17 @@
         text-align: center;
         line-height: 30px;
         border-radius: 3px;
+        border: 1px solid #24292e;
         background-color: #24292e;
+        cursor: pointer;
+        transition: all .2s linear 0s;
+
+        &:hover {
+          color: black;
+          border-radius: 2px;
+          background-color: white;
+          border: 1px solid #24292e;
+        }
       }
     }
   }
