使用css modules 进行解耦

--- a/FontEnd/src/css/tipsBox.less
+++ b/FontEnd/src/css/tipsBox.less
@@ -1,4 +1,15 @@
-:global {
+.tips-box {
+  width: 100%;
 
+  .tips-bg {
+    width: 100%;
+
+    .main {
+      width: 100%;
+
+      .text {
+        width: 100%;
+      }
+    }
+  }
 }
-
