--- a/FontEnd/src/css/App.less
+++ b/FontEnd/src/css/App.less
@@ -1,31 +1,29 @@
-:global {
-  .page {
-    position: relative;
+.page {
+  position: relative;
 
-    .navBox {
-      width: 300px;
-      margin: 30px auto 0;
+  .nav-box {
+    width: 300px;
+    margin: 30px auto 0;
 
-      .content {
+    .content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+
+      .link {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        font-size: 12px;
 
-        .link {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          font-size: 12px;
-
-        }
       }
     }
+  }
 
-    .container {
-      width: 80%;
-      min-width: 700px;
-      margin: 50px auto 0;
-    }
+  .container {
+    width: 80%;
+    min-width: 700px;
+    margin: 50px auto 0;
   }
 }
