--- a/FontEnd/src/css/pageLi.less
+++ b/FontEnd/src/css/pageLi.less
@@ -1,7 +1,8 @@
 .page-list {
+  position: absolute;
+  bottom: 100px;
   width: 80%;
   min-width: 700px;
-  margin: 100px auto 30px;
   padding-top: 10px;
   border-top: 1px solid #eee;
 
