--- a/FontEnd/src/css/style.less
+++ b/FontEnd/src/css/style.less
@@ -1,4 +1,5 @@
 *{margin:0;padding: 0;box-sizing: border-box;}
+html, body {height: 100%;}
 body{font-size: 14px;font-family: "微软雅黑";line-height: 1.5;overflow-y: scroll;}
 ul,li{list-style: none;}
 input,button,textarea{outline: none;font-size: 14px;font-family: "微软雅黑";}
