--- a/FontEnd/src/css/App.less
+++ b/FontEnd/src/css/App.less
@@ -1,29 +1,79 @@
+//@import './font-awesome/less/font-awesome';
 .page {
   position: relative;
+  //width: 100%;
+  height: 100%;
+  min-height: 100%;
+  .main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100%;
+    //padding-right: 320px;
+    transition: all .2s ease-out 0s;
 
-  .nav-box {
-    width: 300px;
-    margin: 30px auto 0;
+    .nav-box {
+      width: 300px;
+      margin: 30px auto 0;
 
-    .content {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-
-      .link {
+      .content {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        font-size: 12px;
+        justify-content: space-between;
 
+        .link {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          font-size: 12px;
+          translate: all;
+
+          > i {
+            font-size: 15px;
+            margin-bottom: 2px;
+          }
+
+        }
+        .link:hover {
+          transform: scale(1.1)
+        }
       }
+    }
+    .container {
+      width: 80%;
+      height: 100%;
+      min-height: 100%;
+      min-width: 700px;
+      margin: 50px auto 0;
+    }
+  }
+  .main-go-left {
+    margin-right: 320px;
+  }
+
+  .float-icon {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 30px;
+    height: 100px;
+    transition: all .2s ease-out 0s;
+
+    .item {
+      width: 100%;
+      margin-bottom: 20px;
+      text-align: center;
+      font-size: 18px;
+      color: white;
+      cursor: pointer;
+      background: black;
     }
   }
 
-  .container {
-    width: 80%;
-    min-width: 700px;
-    margin: 50px auto 0;
+  .icon-go-left {
+    right: 350px;
   }
+
 }
