--- a/FontEnd/src/css/footer.less
+++ b/FontEnd/src/css/footer.less
@@ -1,10 +1,17 @@
-.footer {
-  width: 30%;
-  margin: 20px auto 10px;
+.main {
+  position: absolute;
+  //left: 0;
+  bottom: 10px;
+  //width: 100%;
   min-width: 300px;
   font-size: 14px;
   text-align: center;
-  color: #999
+  color: #999;
+  cursor: pointer;
+
+  .inner {
+    width: 100%;
+  }
 }
 
 
