--- a/FontEnd/src/css/articleItem.less
+++ b/FontEnd/src/css/articleItem.less
@@ -19,6 +19,8 @@
     width: 100%;
     align-self: flex-start;
     color: #555;
+    overflow: hidden;
+    word-wrap: break-word;
   }
 
   .spread-article {
