--- a/FontEnd/src/css/details.less
+++ b/FontEnd/src/css/details.less
@@ -14,6 +14,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+        word-wrap: break-word;
 
         >:nth-child(n) {
           margin-bottom: 20px;
