--- a/FontEnd/src/css/warnDialog.less
+++ b/FontEnd/src/css/warnDialog.less
@@ -1,6 +1,6 @@
 @import './common.less';
 .container {
-  position: absolute;
+  position: fixed;
   left: 50%;
   width: 300px;
   padding-bottom: 10px;
@@ -38,7 +38,7 @@
       top: 300px
     }
     100% {
-      top: 2000px;
+      top: 1000px;
     }
   }
 }
