--- a/FontEnd/src/css/modules/slide.scss
+++ b/FontEnd/src/css/modules/slide.scss
@@ -16,11 +16,31 @@
     width : 100%;
     height: 200px;
 
-    .avatar {
+    .test {
+      position: absolute;
+      border: 0;
       width: 80px;
       height: 80px;
-      border-radius: 3px;
+      //opacity: 0;
     }
+
+    .avatar {
+      position: relative;
+
+      .img {
+        width: 80px;
+        height: 80px;
+        border-radius: 3px;
+      }
+      .upload {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+      }
+    }
+
 
     .name {
       padding: 10px 0 5px;
