--- a/FontEnd/src/css/modules/nav.scss
+++ b/FontEnd/src/css/modules/nav.scss
@@ -1,3 +1,4 @@
+@import '../loadin';
 .head {
   width: 100%;
   //min-width: 700px;
@@ -51,6 +52,10 @@
         background: black;
         > i {
           font-size: 18px;
+
+          &:before{
+            @include tip-icon(search-icon)
+          }
         }
 
         :hover {
